test/spec_vectors/func_ptrs/fail/module_5.wat
(module (table 1 funcref) (elem (nop)))